[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/items/interface/transaction/sell/SellConfirm.gd" type="Script" id=1]
[ext_resource path="res://src/map/pawns/PawnAnim.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/pokemon fonts/Pokemon-FRLG.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/ui/ui_arrow_left_right.png" type="Texture" id=4]
[ext_resource path="res://assets/item/84.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/miscellaneous/shop_confirm.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/miscellaneous/no.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/miscellaneous/yes.png" type="Texture" id=8]
[ext_resource path="res://src/items/interface/transaction/SelectArrow.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=3]
size = 58
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 63
extra_spacing_bottom = 30
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Root/Body:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Root/Body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "click"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Root/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 0 ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Root/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "click"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Root/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 0 ]
}

[node name="Bag" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="Control"]
margin_left = 48.0
margin_top = -6.0
margin_right = 1146.0
margin_bottom = 757.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Remind" type="Label" parent="Control"]
margin_left = 158.0
margin_top = 67.0
margin_right = 1044.0
margin_bottom = 159.0
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_fonts/font = SubResource( 3 )
text = "Do you want to buy ?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BagLabel" type="Label" parent="Control"]
margin_left = 391.0
margin_top = 337.0
margin_right = 700.0
margin_bottom = 395.0
custom_colors/font_color = Color( 0.101961, 0.0431373, 0.0431373, 1 )
custom_fonts/font = SubResource( 1 )
text = "Bag:"
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CashLabel" type="Label" parent="Control"]
margin_left = 384.0
margin_top = 429.0
margin_right = 1270.0
margin_bottom = 521.0
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_fonts/font = SubResource( 3 )
text = "Cash:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountLabel" type="Label" parent="Control"]
margin_left = 496.0
margin_top = 384.0
margin_right = 994.0
margin_bottom = 499.0
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_fonts/font = SubResource( 3 )
text = "     x0    0 $"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectArrow" parent="Control" instance=ExtResource( 9 )]
margin_left = 250.0
margin_top = 660.0
margin_right = 250.0
margin_bottom = 660.0

[node name="Sprite" parent="Control/SelectArrow" index="0"]
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )

[node name="BigIcon" parent="Control" instance=ExtResource( 2 )]
scale = Vector2( 2, 2 )

[node name="Root" parent="Control/BigIcon" index="1"]
position = Vector2( 0, 0 )

[node name="Body" parent="Control/BigIcon/Root" index="0"]
position = Vector2( 133, 201 )
scale = Vector2( 3.16667, 2.95327 )
texture = ExtResource( 5 )

[node name="Yes" parent="Control" instance=ExtResource( 2 )]

[node name="AnimationPlayer" parent="Control/Yes" index="0"]
anims/RESET = SubResource( 4 )
anims/click = SubResource( 5 )

[node name="Root" parent="Control/Yes" index="1"]
position = Vector2( 0, 0 )

[node name="Body" parent="Control/Yes/Root" index="0"]
position = Vector2( 1128.89, 1999.14 )
scale = Vector2( 7.6, 7.6 )
texture = ExtResource( 8 )
hframes = 4

[node name="No" parent="Control" instance=ExtResource( 2 )]

[node name="AnimationPlayer" parent="Control/No" index="0"]
anims/RESET = SubResource( 6 )
anims/click = SubResource( 7 )

[node name="Root" parent="Control/No" index="1"]
position = Vector2( 0, 0 )

[node name="Body" parent="Control/No/Root" index="0"]
position = Vector2( 2632.05, 1983.93 )
scale = Vector2( 7.6, 7.6 )
texture = ExtResource( 7 )
hframes = 4

[editable path="Control/SelectArrow"]
[editable path="Control/BigIcon"]
[editable path="Control/Yes"]
[editable path="Control/No"]
